<resources>
    <string name="app_name">Dyrebar</string>
    <string name="activity_label_my_profile">Min Profil</string>
    <string name="signin">Logg inn</string>
    <string name="signinwith">Logg inn med</string>
    <string name="signin_google">Google</string>
    <string name="signin_facebook">Facebook</string>
    <string name="or">eller</string>
    <string name="signin_mail">Epost</string>
    <string name="skip_signin">Hopp over</string>
    <string name="home">Hjem</string>
    <string name="missing">Savnet</string>
    <string name="found">Funnet</string>
    <string name="blogg">Blogg</string>
    <string name="adp_home_poster_distance">Avstand</string>
    <string name="contact">Kontakt</string>
    <string name="show_map">Vis i kart</string>
    <string name="my_animals">Mine dyr</string>
    <string name="my_posters">Mine annonser</string>
    <string name="solved">Løst</string>
    <string name="delete">Slett</string>
    <string name="spinner_please_select">Vennligst velg</string>
    <string name="please_wait">Vennligst vent</string>
    <string name="challenge_sign_in_message">Validerer innloggingen</string>
    <string name="upload_animal_profile">Laster opp dyrets profil</string>
    <string name="challenge_register_title">Vennligst vent</string>
    <string name="challenge_register_message">Registrerer deg hos Dyrebar</string>
    <string name="create_profile_hint_firstName">Fornavn</string>
    <string name="create_profile_hint_lastName">Etternavn</string>
    <string name="create_profile_hint_phone">Telefonnummer</string>
    <string name="create_profile_hint_address">Adresse</string>
    <string name="create_profile_hint_postCode">Postnummer</string>
    <string name="create_profile_hint_email">Epost</string>
    <string name="hind_password">Passord</string>
    <string name="sign_in">Logg inn</string>
    <string name="register_new_user">Opprett ny bruker</string>
    <string name="forgotten_password">Glemt passord?</string>
    <string name="register">Registrer</string>
    <string name="call">Ring</string>
    <string name="sendmail">Send epost</string>
    <string name="create_profile_image_desc">Profil bilde</string>
    <string name="report_missing_btn">Meld Savnet</string>
    <string name="create_profile_error_firstName">Vennligst fyll inn fornavn</string>
    <string name="create_profile_error_lastName">Vennligst fyll inn etternavn</string>
    <string name="create_profile_error_tlf">Vennligst fyll inn telefon nummer</string>
    <string name="create_profile_error_address">Vennligst fyll inn adresse</string>
    <string name="create_profile_error_postCode">Vennligst fyll inn postnummer</string>
    <string name="create_profile_error_email">Vennligst fyll inn epost</string>
    <string name="register_account_password_short">Vennligst skriv inn et passord som er lengre enn 6 tegn</string>
    <string name="register_account_password_missing">Vennligst skriv inn et passord</string>
    <string name="register_account_email_notValid">Vennligst skriv inn en gyldig epost adresse</string>
    <string name="register_account_email_missing">Vennligst skriv inn en epost adresse</string>
    <string name="create_animal_profile_step_basic">Grunnleggende</string>
    <string name="create_animal_profile_step_extended">Utvidet</string>
    <string name="create_animal_profile_step_appearance">Utseende</string>
    <string name="create_animal_profile_step_image">Bilde</string>
    <string name="create_animal_profile_step_desc">Beskrivelse</string>
    <string name="create_animal_profile_hint_name">Dyrets navn</string>
    <string name="create_animal_profile_hint_idTag">Id tag (Valgfritt)</string>
    <string name="create_animal_profile_hint_animalType">Type dyr</string>
    <string name="create_animal_profile_hint_sex">Dyrets kjønn</string>
    <string name="create_animal_profile_hint_sterilized">Er dyret sterilisert/kastrert</string>
    <string name="create_animal_profile_error_name">Vennligst skriv inn navn</string>
    <string name="create_animal_profile_error_animalType">Vennligst velg type dyr</string>
    <string name="create_animal_profile_error_sex">Vennligst velg kjønn</string>
    <string name="create_animal_profile_error_sterilized">Vennligst velg om dyret er kastrert/sterilisert</string>
    <string name="create_animal_profile_error_furLength">Vennligst velg pelslengde</string>
    <string name="create_animal_profile_error_furPattern">Vennligst velg pelsmønster</string>
    <string name="create_animal_profile_error_furColor">Vennligst velg pelsfarge</string>
    <string name="create_animal_profile_error_image">Vennligst velg et bilde av dyret ditt</string>
    <string name="create_animal_profile_animal_type_dog">Hund</string>
    <string name="create_animal_profile_animal_type_cat">Katt</string>
    <string name="create_animal_profile_animal_type_rabbit">Kanin</string>
    <string name="create_animal_profile_animal_type_bird">Fugl</string>
    <string name="create_animal_profile_animal_type_other">Annet</string>
    <string name="create_animal_profile_animal_type_extra">Rase eller utvidet info</string>
    <string name="create_animal_profile_animal_sex_male">Hann</string>
    <string name="create_animal_profile_animal_sex_female">Hunn</string>
    <string name="create_animal_profile_animal_sex_unknown">Ukjent</string>
    <string name="yes">Ja</string>
    <string name="no">Nei</string>
    <string name="cancel">Avbryt</string>
    <string name="unknown">Ukjent</string>
    <string name="continue_">Fortsett</string>
    <string name="complete_">Fullfør</string>
    <string name="ok">Ok</string>
    <string name="filter">Filtrer</string>
    <string name="search">Søk</string>
    <string name="all">Alle</string>
    <string name="clear_filter">Tøm filter</string>
    <string name="unknown_location">Ukjent plassering</string>
    <string name="create_animal_profile_animal_fur_color">Pelsfarge</string>
    <string name="create_animal_profile_animal_fur_length">Pelslengde</string>
    <string name="create_animal_profile_animal_fur_pattern">Pelsmønster</string>
    <string name="create_animal_profile_animal_fur_length_unknown">Uvvist</string>
    <string name="create_animal_profile_animal_fur_length_short">Kort</string>
    <string name="create_animal_profile_animal_fur_length_half">Halvlangt</string>
    <string name="create_animal_profile_animal_fur_length_long">Langt</string>
    <string name="animal_profile_animal_fur_pattern_single">Ensfarget</string>
    <string name="animal_profile_animal_fur_pattern_duo">Tofarget</string>
    <string name="animal_profile_animal_fur_pattern_trio">Tricolour</string>
    <string name="animal_profile_animal_fur_pattern_tiger_stripes">Tigerstripet</string>
    <string name="animal_profile_animal_fur_pattern_turtle">Skilpaddemønstret</string>
    <string name="animal_profile_animal_fur_pattern_variegated">Spraglete</string>
    <string name="animal_profile_animal_fur_pattern_other">Annet</string>
    <string name="not_given">Ikke oppgitt</string>
    <string name="edit">Rediger</string>
    <string name="id_tag_">ID-Merke:</string>
    <string name="type_">Type:</string>
    <string name="sex_">Kjønn:</string>
    <string name="sterilized_">Sterilisert:</string>
    <string name="color_">Farge:</string>
    <string name="furLength_">Pelslengde</string>
    <string name="furPattern_">Pelsmønster:</string>
    <string name="description_">Beskrivelse:</string>
    <string name="create_animal_profile_animal_description">Beskrivelse av utseende og kjennetegn</string>
    <string name="notifications">Notifikasjoner</string>
    <string name="info">Info</string>
    <string name="license">Lisenser</string>
    <string name="terms_of_service">Vilkår for bruk</string>
    <string name="privacy_policy">Personvernregler</string>
    <string name="logout_btn">Logg ut</string>
    <string name="show_more">Vis mer</string>
    <string name="dialog_image_source_title">Hvor vil du hente bilet i fra?</string>
    <string name="dialog_image_source_use_camera">Bruk kamera</string>
    <string name="dialog_image_source_use_library">Dine bilder</string>
    <string name="permission_camera_title">Kamera rettigheter</string>
    <string name="permission_camera_desc">For å få penest mulig bildet av dyret ditt trenger vi tilgang til kameraet ditt.</string>
    <string name="permission_location_title">Posisjons tillatelse</string>
    <string name="permission_location_desc">For å kunne filtrere og gi deg relevant innhold trenger appen tilgang til posisjonen din.</string>
    <string name="permission_storage_title">Lagrings tilgang</string>
    <string name="permission_storage_desc">For å kunne lagre kvalitetsbilder av deg og dyret ditt trenger vi et sted for å lagre bildene.</string>
    <string name="permission_permit">Tillat</string>
    <string name="settings">Innstillinger</string>
    <string name="settings_app_version">Applikasjons versjon</string>
    <string name="settings_sign_out_title">Logg av</string>
    <string name="settings_sign_out_message">Er du sikker på at du vil logge av?</string>
    <string name="settings_sign_out_error_message">Kunne ikke fjerne sesjon på server</string>
    <string name="error">Feil</string>
    <string name="_0x1">Eposten er allerede registrert med en annen innloggingsmetode</string>
    <string name="_0x2">Klarte ikke registrere. Kontakt brukerstøtte hvis problemet vedvarer</string>
    <string name="_0x3">Klarte ikke finne en konto hos Dyrebar med valgt innlogging</string>
    <string name="_0x4">Noe gikk galt</string>
    <string name="_0x5">Epost er tilknyttet innlogging med Facebook eller Google</string>
    <string name="_0x6">Utlogging feilet. Kontakt brukerstøtte hvis problemet vedvarer</string>
    <string name="_0x7">Noe galt skjedde. Prøv innlogging på nytt</string>
    <string name="_0x8">Innlogging feilet. Prøv på nytt</string>
    <string name="_0x9">Epost eller passordet er feil</string>
    <string name="_0x10">Verifikasjon mot FaceBook feilet. Kontakt brukerstøtte hvis problemet vedvarer</string>
    <string name="_0x11">Verifikasjon mot Google feilet. Kontakt brukerstøtte hvis problemet vedvarer</string>
    <string name="_0x12">Token ikke gyldig</string>
    <string name="_0x13">Klarte ikke å finne profil</string>
    <string name="_0x14">Klarte ikke registrere profil</string>
    <string name="_0x15">Oppdatering av epost feilet. Kontakt brukerstøtte hvis problemet vedvarer</string>
    <string name="_0x16">Ufullstendig data</string>
    <string name="_0x17">Fant ingen lagret data</string>
    <string name="_0x18">Registrering av dyret feilet</string>
    <string name="_0x19">Finner ikke funnet annonse</string>
    <string name="_0x20">Finner ikke savnet annonse</string>
    <string name="_0x21">Sletting av savnet annonse feilet. Kontakt brukerstøtte hvis problemet vedvarer</string>
    <string name="_0x22">Opprettelse av savnet annonse feilet. Kontakt brukerstøtte hvis problemet vedvarer</string>
    <string name="_0x23">Finner ikke funnet annonsen</string>
    <string name="_0x24">Finner ikke funnet annonse</string>
    <string name="_0x25">Sletting av funnet annonse feilet. Kontakt brukerstøtte hvis problemet vedvarer</string>
    <string name="_0x26">Opprettelse av funnet annonse feilet. Kontakt brukerstøtte hvis problemet vedvarer</string>
    <string name="_0x27">Vennligst tillatt innhenting av epost for å fortsette</string>
    <string name="_0x28"></string>
    <string name="_0x29"></string>
    <string name="_0x30"></string>
    <string name="facebook_app_id">2183988041905442</string>
    <string name="fb_login_protocol_scheme">fb2183988041905442</string>
    <string name="link_privacy_policy">https://dyrebar.no/personvern/</string>
    <string name="link_terms_of_use">https://dyrebar.no/brukervilk%C3%A5r/</string>
</resources>