<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_animal_profile_hint_sex" />
    <RadioGroup
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/stepper_animal_ext_sex_male"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_animal_profile_animal_sex_male" />
        <RadioButton
            android:id="@+id/stepper_animal_ext_sex_female"
            android:layout_marginStart="20dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_animal_profile_animal_sex_female" />
        <RadioButton
            android:id="@+id/stepper_animal_ext_sex_unknown"
            android:visibility="gone"
            android:layout_marginStart="20dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_animal_profile_animal_sex_unknown" />
    </RadioGroup>

    <TextView
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_animal_profile_hint_sterilized" />
    <RadioGroup
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/stepper_animal_ext_sterilized_yes"
            android:layout_marginEnd="20dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes" />
        <RadioButton
            android:id="@+id/stepper_animal_ext_sterilized_no"
            android:layout_marginStart="20dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no" />
        <RadioButton
            android:id="@+id/stepper_animal_ext_sterilized_unknown"
            android:visibility="gone"
            android:layout_marginStart="20dp"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unknown" />
    </RadioGroup>
</LinearLayout>