<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorWhite">
    </androidx.appcompat.widget.Toolbar>



    <no.dyrebar.dyrebar.CustomControls.SettingSwitchView
        android:id="@+id/settingSwitchView_notifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:src="@drawable/ic_notifications_black_24dp"
        app:text="@string/notifications" />


    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/info"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settingSwitchView_notifications"
        tools:text="Info"></TextView>

    <no.dyrebar.dyrebar.CustomControls.SettingTextView
        android:id="@+id/settingTextView_appVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        app:src="@drawable/ic_info_outline_black_24dp"
        app:textTop="@string/settings_app_version"
        tools:layout_editor_absoluteX="-16dp" />

    <no.dyrebar.dyrebar.CustomControls.SettingClickView
        android:id="@+id/settingClickView_License"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:clickSrc="@drawable/ic_open_in_browser_black_24dp"
        app:layout_constraintTop_toBottomOf="@+id/settingTextView_appVersion"
        app:src="@drawable/ic_legal"
        app:text="@string/license" />

    <no.dyrebar.dyrebar.CustomControls.SettingClickView
        android:id="@+id/settingClickView_TOU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:clickSrc="@drawable/ic_open_in_browser_black_24dp"
        app:layout_constraintTop_toBottomOf="@+id/settingClickView_License"
        app:src="@drawable/ic_legal"
        app:text="@string/terms_of_service" />

    <no.dyrebar.dyrebar.CustomControls.SettingClickView
        android:id="@+id/settingClickView_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:clickSrc="@drawable/ic_open_in_browser_black_24dp"
        app:layout_constraintTop_toBottomOf="@+id/settingClickView_TOU"
        app:src="@drawable/ic_legal"
        app:text="@string/privacy_policy" />


    <Button
        android:id="@+id/log_out_btn"
        android:layout_width="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_height="wrap_content"
        android:minHeight="58dp"
        android:backgroundTint="@color/colorWhite"
        android:elevation="5dp"
        android:text="@string/logout_btn"
        android:textColor="@color/colorRed"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>