<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_animal_profile_name_static"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_animal_profile_name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_animal_profile_hint_name"
            android:inputType="textPersonName|text" />

    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_animal_profile_idtag_static"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_animal_profile_idtag_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_animal_profile_hint_idTag"
            android:inputType="number|text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_animal_profile_hint_animalType" />
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/create_animal_profile_animal_type_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_marginTop="4dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_animal_profile_animal_type_extra_static"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_animal_profile_animal_type_extra_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_animal_profile_animal_type_extra"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>