<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/create_animal_profile_animal_fur_color_static"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/create_animal_profile_animal_fur_color_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/create_animal_profile_animal_fur_color"
            android:inputType="textPersonName|text" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_animal_profile_animal_fur_length" />
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/create_animal_profile_animal_fur_length_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_marginTop="4dp"/>

    <TextView
        android:layout_marginTop="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_animal_profile_animal_fur_pattern" />
    <androidx.appcompat.widget.AppCompatSpinner
        android:id="@+id/create_animal_profile_animal_fur_pattern_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="45dp"
        android:layout_marginTop="4dp"/>

</LinearLayout>